--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,13 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [platformio]
 src_dir = .
 
@@ -6,8 +16,7 @@ platform = atmelavr
 framework = arduino
 board = pro8MHzatmega328
 monitor_speed = 57600
-
-lib_deps =
-  AskSinPP
-  EnableInterrupt
-  Low-Power
+lib_deps = 
+	EnableInterrupt
+	Low-Power
+	AskSinPP
